Refactor gradle to facilitate composite builds